lib/core/ffi/ace_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Size Function(ffi.Pointer<ace_machine>, ffi.Pointer<ffi.Float>, ffi.Size)
>()
external int ace_audio_read(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Float> out,
  int frames,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>, ffi.Float)>()
external void ace_audio_set_volume(ffi.Pointer<ace_machine> m, double volume);

@ffi.Native<ffi.Int Function(ffi.Pointer<ace_machine>)>()
external int ace_audio_start(ffi.Pointer<ace_machine> m);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>)>()
external void ace_audio_stop(ffi.Pointer<ace_machine> m);

@ffi.Native<
  ffi.Size Function(
    ffi.Pointer<ace_machine>,
    ffi.Pointer<ffi.Pointer<ffi.Uint32>>,
  )
>()
external int ace_beeper_events(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Pointer<ffi.Uint32>> events_out,
);

@ffi.Native<
  ffi.Pointer<ace_machine> Function(ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external ffi.Pointer<ace_machine> ace_create(
  ffi.Pointer<ffi.Uint8> rom,
  int rom_len,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>)>()
external void ace_destroy(ffi.Pointer<ace_machine> m);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ace_machine>)>()
external ffi.Pointer<ffi.Uint8> ace_framebuffer(ffi.Pointer<ace_machine> m);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ace_machine>, ffi.Int, ffi.Int, ffi.Int)
>()
external void ace_key(ffi.Pointer<ace_machine> m, int port, int mask, int down);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>, ffi.Int, ffi.Int)>()
external void ace_key_char(ffi.Pointer<ace_machine> m, int ace_char, int down);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>)>()
external void ace_key_release_all(ffi.Pointer<ace_machine> m);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<ace_machine>, ffi.Uint16)>()
external int ace_peek(ffi.Pointer<ace_machine> m, int addr);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ace_machine>, ffi.Uint16, ffi.Uint8)
>()
external void ace_poke(ffi.Pointer<ace_machine> m, int addr, int value);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>)>()
external void ace_reset(ffi.Pointer<ace_machine> m);

@ffi.Native<ffi.Int Function(ffi.Pointer<ace_machine>)>()
external int ace_run_frame(ffi.Pointer<ace_machine> m);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ace_machine>, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external int ace_snapshot_load(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Uint8> in$,
  int len,
);

@ffi.Native<
  ffi.Size Function(ffi.Pointer<ace_machine>, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external int ace_snapshot_save(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Uint8> out,
  int cap,
);

@ffi.Native<ffi.Size Function()>()
external int ace_snapshot_size();

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ace_machine>, ffi.Pointer<ffi.Char>)
>()
external void ace_spool(ffi.Pointer<ace_machine> m, ffi.Pointer<ffi.Char> text);

@ffi.Native<ffi.Int Function(ffi.Pointer<ace_machine>)>()
external int ace_spool_active(ffi.Pointer<ace_machine> m);

@ffi.Native<ffi.Void Function(ffi.Pointer<ace_machine>)>()
external void ace_spool_cancel(ffi.Pointer<ace_machine> m);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ace_machine>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Int>,
  )
>()
external int ace_tape_request(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Char> name_out,
  int name_cap,
  ffi.Pointer<ffi.Int> kind_out,
);

@ffi.Native<
  ffi.Size Function(
    ffi.Pointer<ace_machine>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external int ace_tape_saved(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Char> name_out,
  int name_cap,
  ffi.Pointer<ffi.Int> kind_out,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> data_out,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ace_machine>, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external void ace_tape_supply(
  ffi.Pointer<ace_machine> m,
  ffi.Pointer<ffi.Uint8> tape,
  int len,
);

const int ACE_AUDIO_SAMPLE_RATE = 44100;

const int ACE_FRAME_SCREEN_DIRTY = 1;

const int ACE_FRAME_TAPE_LOAD = 2;

const int ACE_FRAME_TAPE_SAVED = 4;

const int ACE_SCREEN_HEIGHT = 192;

const int ACE_SCREEN_WIDTH = 256;

const int ACE_TAPE_NAME_MAX = 10;

final class ace_machine extends ffi.Opaque {}

enum ace_tape_kind {
  ACE_TAPE_DICT(0),
  ACE_TAPE_BYTES(1);

  final int value;
  const ace_tape_kind(this.value);

  static ace_tape_kind fromValue(int value) => switch (value) {
    0 => ACE_TAPE_DICT,
    1 => ACE_TAPE_BYTES,
    _ => throw ArgumentError('Unknown value for ace_tape_kind: $value'),
  };
}
